fix: treemap can be expanded after collapsed (#1232)

--- a/packages/components/src/components/Charts/treemap.module.scss
+++ b/packages/components/src/components/Charts/treemap.module.scss
@@ -36,8 +36,10 @@
         padding 0.3s;
 
       &.collapsed {
-        height: 0;
-        padding: 0;
+        .ant-card-body {
+          height: 0;
+          padding: 0;
+        }
       }
     }
 
